add filter bottom sheet + refactor some values

--- a/app/src/main/res/layout-land/activity_add_property.xml
+++ b/app/src/main/res/layout-land/activity_add_property.xml
@@ -32,13 +32,13 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:padding="@dimen/activity_add_property_padding">
+            android:padding="@dimen/default_padding">
 
             <ImageView
                 android:id="@+id/activity_add_property_type_iv"
                 style="@style/detailIcon"
-                android:layout_width="@dimen/activity_add_property_image_size"
-                android:layout_height="@dimen/activity_add_property_image_size"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/property_type"
                 android:src="@drawable/ic_apartment"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_type_tv"
@@ -50,7 +50,7 @@
                 style="@style/dropdownMenu"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
+                android:layout_marginStart="@dimen/default_margin"
                 android:autofillHints="@string/property_type"
                 android:hint="@string/property_type"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -69,8 +69,8 @@
             <ImageView
                 android:id="@+id/activity_add_property_price_iv"
                 style="@style/detailIcon"
-                android:layout_width="@dimen/activity_add_property_image_size"
-                android:layout_height="@dimen/activity_add_property_image_size"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/price"
                 android:src="@drawable/ic_money"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_price_et"
@@ -82,8 +82,8 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_spacing"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_margin"
                 android:autofillHints="@string/price"
                 android:hint="@string/price"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
                 android:id="@+id/activity_add_property_add_media_ib"
                 android:layout_width="@dimen/activity_add_property_media_container_size"
                 android:layout_height="@dimen/activity_add_property_media_container_size"
-                android:layout_marginTop="@dimen/activity_add_property_spacing"
+                android:layout_marginTop="@dimen/default_margin"
                 android:contentDescription="@string/add_media"
                 android:src="@drawable/ic_add_photo"
                 app:layout_constraintStart_toStartOf="parent"
@@ -131,8 +131,8 @@
             <ImageView
                 android:id="@+id/activity_add_property_surface_iv"
                 style="@style/detailIcon"
-                android:layout_width="@dimen/activity_add_property_image_size"
-                android:layout_height="@dimen/activity_add_property_image_size"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/surface"
                 android:src="@drawable/ic_surface"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_surface_et"
@@ -144,8 +144,8 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_spacing"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_margin"
                 android:autofillHints="@string/surface"
                 android:hint="@string/surface"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -163,8 +163,8 @@
             <ImageView
                 android:id="@+id/activity_add_property_rooms_iv"
                 style="@style/detailIcon"
-                android:layout_width="@dimen/activity_add_property_image_size"
-                android:layout_height="@dimen/activity_add_property_image_size"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/number_of_rooms"
                 android:src="@drawable/ic_home"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_rooms_et"
@@ -176,8 +176,8 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_spacing"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_margin"
                 android:autofillHints="@string/number_of_rooms"
                 android:hint="@string/number_of_rooms"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -194,8 +194,8 @@
             <ImageView
                 android:id="@+id/activity_add_property_bathrooms_iv"
                 style="@style/detailIcon"
-                android:layout_width="@dimen/activity_add_property_image_size"
-                android:layout_height="@dimen/activity_add_property_image_size"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/number_of_bathrooms"
                 android:src="@drawable/ic_bathroom"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_bathrooms_et"
@@ -207,8 +207,8 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_spacing"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_margin"
                 android:autofillHints="@string/number_of_bathrooms"
                 android:hint="@string/number_of_bathrooms"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -225,8 +225,8 @@
             <ImageView
                 android:id="@+id/activity_add_property_bedrooms_iv"
                 style="@style/detailIcon"
-                android:layout_width="@dimen/activity_add_property_image_size"
-                android:layout_height="@dimen/activity_add_property_image_size"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/number_of_bathrooms"
                 android:src="@drawable/ic_bedroom"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_bedrooms_et"
@@ -238,8 +238,8 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_spacing"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_margin"
                 android:autofillHints="@string/number_of_bedrooms"
                 android:hint="@string/number_of_bedrooms"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -256,9 +256,9 @@
             <ImageView
                 android:id="@+id/activity_add_property_description_iv"
                 style="@style/detailIcon"
-                android:layout_width="@dimen/activity_add_property_image_size"
-                android:layout_height="@dimen/activity_add_property_image_size"
-                android:layout_marginTop="@dimen/activity_add_property_spacing"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
+                android:layout_marginTop="@dimen/default_margin"
                 android:contentDescription="@string/description"
                 android:src="@drawable/ic_pen"
                 app:layout_constraintStart_toStartOf="parent"
@@ -269,8 +269,8 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_spacing"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_margin"
                 android:autofillHints="@string/number_of_bedrooms"
                 android:fontFamily="@font/roboto"
                 android:gravity="bottom"
@@ -290,8 +290,8 @@
             <ImageView
                 android:id="@+id/activity_add_property_address_iv"
                 style="@style/detailIcon"
-                android:layout_width="@dimen/activity_add_property_image_size"
-                android:layout_height="@dimen/activity_add_property_image_size"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/number_of_bathrooms"
                 android:src="@drawable/ic_pin"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_address_line1_et"
@@ -303,8 +303,8 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_spacing"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_margin"
                 android:autofillHints="@string/address_line_1"
                 android:hint="@string/address_line_1"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -324,8 +324,8 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_padding"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_padding"
                 android:autofillHints="@string/address_line_2"
                 android:hint="@string/address_line_2_optional"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -344,9 +344,9 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_padding"
-                android:layout_marginEnd="@dimen/activity_add_property_padding"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_padding"
+                android:layout_marginEnd="@dimen/default_padding"
                 android:autofillHints="@string/city"
                 android:hint="@string/city"
                 app:layout_constraintEnd_toStartOf="@+id/activity_add_property_address_postal_code_et"
@@ -365,7 +365,7 @@
                 style="@style/editText"
                 android:layout_width="@dimen/activity_add_property_postal_code_width"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/activity_add_property_padding"
+                android:layout_marginTop="@dimen/default_padding"
                 android:autofillHints="@string/postal_code"
                 android:hint="@string/postal_code"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -383,8 +383,8 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_padding"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_padding"
                 android:autofillHints="@string/country"
                 android:hint="@string/country"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -401,9 +401,9 @@
             <ImageView
                 android:id="@+id/activity_add_property_point_of_interest_iv"
                 style="@style/detailIcon"
-                android:layout_width="@dimen/activity_add_property_image_size"
-                android:layout_height="@dimen/activity_add_property_image_size"
-                android:layout_marginTop="@dimen/activity_add_property_spacing"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
+                android:layout_marginTop="@dimen/default_margin"
                 android:contentDescription="@string/point_of_interest"
                 android:src="@drawable/ic_near"
                 app:layout_constraintStart_toStartOf="parent"
@@ -413,8 +413,8 @@
                 android:id="@+id/activity_add_property_point_of_interest_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_spacing"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_margin"
                 android:text="@string/point_of_interest"
                 android:textSize="@dimen/text_size"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_point_of_interest_iv"
@@ -424,8 +424,8 @@
                 android:id="@+id/activity_add_property_point_of_interest_cg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_padding"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_padding"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/activity_add_property_point_of_interest_iv"
                 app:layout_constraintTop_toBottomOf="@+id/activity_add_property_point_of_interest_tv" />
@@ -433,8 +433,8 @@
             <ImageView
                 android:id="@+id/activity_add_property_agent_iv"
                 style="@style/detailIcon"
-                android:layout_width="@dimen/activity_add_property_image_size"
-                android:layout_height="@dimen/activity_add_property_image_size"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/real_estate_agent"
                 android:src="@drawable/ic_person"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_agent_et"
@@ -446,8 +446,8 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_padding"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_padding"
                 android:autofillHints="@string/real_estate_agent"
                 android:hint="@string/real_estate_agent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -464,8 +464,8 @@
             <ImageView
                 android:id="@+id/activity_add_property_sold_date_iv"
                 style="@style/detailIcon"
-                android:layout_width="@dimen/activity_add_property_image_size"
-                android:layout_height="@dimen/activity_add_property_image_size"
+                android:layout_width="@dimen/default_icon_size"
+                android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/real_estate_agent"
                 android:src="@drawable/ic_sold_date"
                 android:visibility="gone"
@@ -478,11 +478,12 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/activity_add_property_spacing"
-                android:layout_marginTop="@dimen/activity_add_property_padding"
+                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_padding"
                 android:autofillHints="@string/real_estate_agent"
                 android:hint="@string/sold_date"
                 android:visibility="gone"
+                app:startIconDrawable="@drawable/ic_calendar"
                 app:endIconContentDescription="@string/clear_date_picker"
                 app:endIconDrawable="@drawable/ic_clear"
                 app:endIconMode="custom"
@@ -504,7 +505,7 @@
         android:id="@+id/activity_add_property_save_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/activity_add_property_padding"
+        android:layout_marginHorizontal="@dimen/default_padding"
         android:text="@string/save"
         app:backgroundTint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
