--- a/app/src/main/res/layout/filter_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/filter_bottom_sheet_dialog.xml
@@ -587,7 +587,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_add_property_margin_top"
-                android:text="@string/clear_filters"
+                android:text="@string/reset_filters"
                 app:backgroundTint="@color/colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
