do some refactoring on userData classes

--- a/app/src/main/res/layout/filter_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/filter_bottom_sheet_dialog.xml
@@ -67,6 +67,7 @@
                 android:id="@+id/filter_bottom_sheet_type_cg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_half_margin"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/filter_bottom_sheet_type_iv" />
@@ -131,8 +132,8 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/default_margin"
-                android:layout_marginTop="@dimen/default_margin"
+                android:layout_marginEnd="@dimen/default_quarter_margin"
+                android:layout_marginTop="@dimen/default_half_margin"
                 android:autofillHints="@string/address_line_1"
                 android:hint="@string/from"
                 app:layout_constraintEnd_toStartOf="@+id/filter_bottom_sheet_price_max_et"
@@ -150,8 +151,8 @@
                 android:id="@+id/filter_bottom_sheet_price_max_et"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/default_margin"
-                android:layout_marginTop="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_half_margin"
+                android:layout_marginStart="@dimen/default_quarter_margin"
                 android:autofillHints="@string/address_line_1"
                 android:hint="@string/to"
                 app:layout_constraintStart_toEndOf="@id/filter_bottom_sheet_price_min_et"
@@ -192,8 +193,8 @@
                 style="@style/editText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/default_margin"
-                android:layout_marginTop="@dimen/default_margin"
+                android:layout_marginEnd="@dimen/default_quarter_margin"
+                android:layout_marginTop="@dimen/default_half_margin"
                 android:autofillHints="@string/address_line_1"
                 android:hint="@string/from"
                 app:layout_constraintEnd_toStartOf="@+id/filter_bottom_sheet_surface_max_et"
@@ -211,8 +212,8 @@
                 android:id="@+id/filter_bottom_sheet_surface_max_et"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/default_margin"
-                android:layout_marginTop="@dimen/default_margin"
+                android:layout_marginStart="@dimen/default_quarter_margin"
+                android:layout_marginTop="@dimen/default_half_margin"
                 android:autofillHints="@string/address_line_1"
                 android:hint="@string/to"
                 app:layout_constraintStart_toEndOf="@id/filter_bottom_sheet_surface_min_et"
@@ -488,6 +489,7 @@
                 android:id="@+id/filter_bottom_sheet_poi_cg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_half_margin"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/filter_bottom_sheet_poi_title_tv" />
@@ -527,8 +529,7 @@
                 android:id="@+id/filter_bottom_sheet_post_date_et"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/default_margin"
-                android:layout_marginTop="@dimen/activity_add_property_margin_checkbox"
+                android:layout_marginTop="@dimen/default_half_margin"
                 android:autofillHints="@string/real_estate_agent"
                 android:hint="@string/available_since"
                 android:visibility="gone"
@@ -582,7 +583,7 @@
                 android:id="@+id/filter_bottom_sheet_sold_date_et"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/default_margin"
+                android:layout_marginTop="@dimen/default_half_margin"
                 android:autofillHints="@string/real_estate_agent"
                 android:hint="@string/sold_since"
                 android:visibility="gone"
