--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_size">18sp</dimen>
-    <dimen name="default_margin">16sp</dimen>
+    <dimen name="default_margin">16dp</dimen>
+    <dimen name="default_half_margin">4dp</dimen>
+    <dimen name="default_quarter_margin">4dp</dimen>
     <dimen name="default_padding">8dp</dimen>
     <dimen name="default_icon_size">30dp</dimen>
 
